--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ cursor: pointer;
   margin-left: 20px;
 }
 .banner{
-  background-image: url('images/banner.jpg');
+  background-image: url('banner.jpg');
   background-size: cover;
   background-position: center center;
   color: white;
